# genai_learning

./: pyproject.toml
Langchain_models/Chat_models/: chatmodel_claude.py  chatmodel_gemini.py  chatmodel_gpt.py  chatmodel_hf_local.py  chatmodel_huggingface.py
Langchain_models/Embedding_models/: embed_gpt_query.py  embedding_gpt_docs.py
Langchain_models/LLM/: llm_demo.py
Langchain_models/output_parsers/: stroutputparser.py
chains/: conditional.py  parallel.py  sequential.py  simple.py
doc_loaders/: text_loader.py  webbase_loader.py
output_parsers/: jsonoutputparser.py  model.txt  pydanticoutputparser.py  stroutputparser.py  stroutputparser1.py  structuredoutputparser.py
prompts/: chat_prompt_template.py  chatbot.py  messages.py  prompt_1.py  prompt_template.py
runnables/: runnable_parallel.py  seq_runnable.py  simple_llm.py
str_output/: json_schema.json  pydantic_demo.py  str_op_json.py  str_op_llama.py  str_op_pydantic.py  str_op_typedict.py  typedict_demo.py
text_splitters/: length_based.py  text_based.py
